# SMD_Solder

./: .gitignore  CMakeLists.txt  README.md  SMD_Solder.code-workspace
Comp/: CMakeLists.txt  I2C_Config.c  ILI9341_screen.c  SPI_Config.c  Screen_design.c  Screen_design.h  Temp_Ctrl.c  Temp_Ctrl.h  Tests.c  Tests.h  lv_display.h  lv_port_disp.C
Comp/Test/: Test.c  Test.h
Comp/Test/Display_Manager/: TestDisplay_Manager.c  TestDisplay_Manager.h
Comp/Test/SMD_Manager/: TestSMD_Manager.c  TestSMD_Manager.h
Comp/Test/Temp_Ctrl/: TestTemp_Ctrl.c  TestTemp_Ctrl.h
Comp/Test/Temp_Sensing/: TestTemp_Sensing.c  TestTemp_Sensing.h
Comp/UI/: CMakeLists.txt  filelist.txt  project.info  project.info.bak  ui.c  ui.h  ui_events.c  ui_events.c.bak  ui_events.h  ui_events.h.bak  ui_helpers.c  ui_helpers.h
Comp/UI/components/: ui_comp.c  ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_panel1.c  ui_comp_panel1.h
Comp/UI/fonts/: ui_font_LolosFactoryFont24.c  ui_font_Roboto1.c  ui_font_Roboto2.c
Comp/UI/images/: ui_img_bakground_blue_png.c  ui_img_bk_dark_png.c  ui_img_home3_png.c  ui_img_icon_gold_png.c  ui_img_left_arrow_png.c  ui_img_retun_button_png.c  ui_img_up_buton_png.c
Comp/UI/screens/: ui_SCHome.c  ui_SCHome.c.bak  ui_SCHome.h  ui_SCLolos.c  ui_SCLolos.h  ui_SCSetTemp.c  ui_SCSetTemp.h  ui_SCSettings.c  ui_SCSettings.h  ui_SCSolder.c  ui_SCSolder.h  ui_Screen1.c  ui_Screen1.h  ui_Screen2.c  ui_Screen2.h  ui_TFunction.c  ui_TFunction.h
Comp/Useful/: Useful.c  Useful.h
Comp/includes/: Display_Manager.h  ILI9341_screen.h  PWM_Config.h  SMD_Manager.h  SPI_Config.h  Screen_design.h  Temp_Ctrl.h  Temp_Sensing.h
Comp/scr/: Display_Manager.c  ILI9341_screen.c  PWM_Config.c  SMD_Manager.c  Screen_design.c  Temp_Ctrl.c  Temp_Sensing.c
Datasheets/: desktop.ini
Wokwi_simulator/: diagram.json  wokwi.toml
main/: CMakeLists.txt  SPI_Comunication.c  SPI_Comunication.h  idf_component.yml  main.c  main.h
